--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foundation for Sites</title>
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
-  <link type="text/css" rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="foundation.css">
+    <link rel="stylesheet" href="app.css">
+  <link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
   <body>
     <div class="grid-container">
